@@ -1,7 +1,10 @@
 obsplus master
   - obsplus.utils
     * Handled edge case of a lower precision datetime64 causing an int64
-      overflow in `obsplus.utils.time.to_datetime64`. (#224)
+      overflow in `obsplus.utils.time.to_datetime64` (#224).
+  - obsplus.WaveBank
+    * Refactored `get_waveforms_bulk` to allow a dataframe if required
+      columns exist (#229).
 
 obsplus 0.2.0
   - obsplus.structures.fetcher
